--- a/index.html
+++ b/index.html
@@ -14,33 +14,34 @@
     <div class="container mt-4">
         <h1 class="mb-3">Mileage Tracker</h1>
 
-         <div id="auth-section" class="mb-4 card p-3">
-             <div id="logged-out-view">
-                 <h3>Log In</h3>
-                 <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
-                     <li class="nav-item" role="presentation">
-                         <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">Log In</button>
-                     </li>
-                     <!-- <li class="nav-item" role="presentation">
+        <div id="auth-section" class="mb-4 card p-3">
+            <div id="logged-out-view">
+                <h3>Log In</h3>
+                <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login"
+                            type="button" role="tab" aria-controls="login" aria-selected="true">Log In</button>
+                    </li>
+                    <!-- <li class="nav-item" role="presentation">
                          <button class="nav-link" id="signup-tab" data-bs-toggle="tab" data-bs-target="#signup" type="button" role="tab" aria-controls="signup" aria-selected="false">Sign Up</button>
                      </li> -->
-                 </ul>
-                 <div class="tab-content" id="authTabsContent">
-                     <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
-                         <form id="login-form">
-                             <div class="mb-3">
-                                 <label for="login-email" class="form-label">Email address</label>
-                                 <input type="email" class="form-control" id="login-email" required>
-                             </div>
-                             <div class="mb-3">
-                                 <label for="login-password" class="form-label">Password</label>
-                                 <input type="password" class="form-control" id="login-password" required>
-                             </div>
-                             <button type="submit" id="login-button" class="btn btn-primary">Log In</button>
-                             <div id="login-error" class="text-danger mt-2" style="display: none;"></div>
-                         </form>
-                     </div>
-                     <!-- <div class="tab-pane fade" id="signup" role="tabpanel" aria-labelledby="signup-tab">
+                </ul>
+                <div class="tab-content" id="authTabsContent">
+                    <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+                        <form id="login-form">
+                            <div class="mb-3">
+                                <label for="login-email" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="login-email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="login-password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="login-password" required>
+                            </div>
+                            <button type="submit" id="login-button" class="btn btn-primary">Log In</button>
+                            <div id="login-error" class="text-danger mt-2" style="display: none;"></div>
+                        </form>
+                    </div>
+                    <!-- <div class="tab-pane fade" id="signup" role="tabpanel" aria-labelledby="signup-tab">
                          <form id="signup-form">
                               <div class="mb-3">
                                  <label for="signup-email" class="form-label">Email address</label>
@@ -54,17 +55,17 @@
                               <div id="signup-error" class="text-danger mt-2" style="display: none;"></div>
                          </form>
                      </div> -->
-                 </div>
-                 <div id="auth-info" class="alert alert-info mt-3" style="display: none;"></div>
-             </div>
+                </div>
+                <div id="auth-info" class="alert alert-info mt-3" style="display: none;"></div>
+            </div>
 
-             <div id="logged-in-view" style="display: none;">
-                 <p>Welcome, <strong id="user-email"></strong>!</p>
-                 <button id="logout-button" class="btn btn-danger btn-sm">Log Out</button>
-             </div>
-         </div>
-         <div id="app-content" style="display: none;">
-             <div class="mb-3">
+            <div id="logged-in-view" style="display: none;">
+                <p>Welcome, <strong id="user-email"></strong>!</p>
+                <button id="logout-button" class="btn btn-danger btn-sm">Log Out</button>
+            </div>
+        </div>
+        <div id="app-content" style="display: none;">
+            <div class="mb-3">
                 <h2>Add Client Address</h2>
                 <div class="input-group">
                     <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
@@ -76,8 +77,8 @@
             <div>
                 <h2>My Client Addresses</h2>
                 <ul id="address-list" class="list-group">
-                    </ul>
-                 <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
+                </ul>
+                <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
 
             <hr class="my-4">
@@ -88,7 +89,8 @@
                     <li class="list-group-item text-muted">Select addresses above to build your trip...</li>
                 </ul>
 
-                <button id="clear-trip-sequence-button" class="btn btn-secondary btn-sm mb-3" style="display: none;">Clear Trip Sequence</button>
+                <button id="clear-trip-sequence-button" class="btn btn-secondary btn-sm mb-3"
+                    style="display: none;">Clear Trip Sequence</button>
 
                 <div class="row mb-3">
                     <div class="col-md-6">
@@ -96,7 +98,7 @@
                         <input type="date" class="form-control" id="trip-date-input">
                     </div>
                     <div class="col-md-6">
-                         <label for="trip-time-input" class="form-label">Trip Time</label>
+                        <label for="trip-time-input" class="form-label">Trip Time</label>
                         <input type="time" class="form-control" id="trip-time-input">
                     </div>
                 </div>
@@ -110,9 +112,9 @@
                     <p id="potential-reimbursement">Potential Reimbursement: --</p>
                     <h4>Mileage Between Stops:</h4>
                     <ul id="trip-legs-list" class="list-group">
-                        </ul>
-                     <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
-                     <div id="save-trip-error" class="text-danger mt-2" style="display: none;"></div>
+                    </ul>
+                    <button id="save-trip-button" class="btn btn-primary mt-3" style="display: none;">Save Trip</button>
+                    <div id="save-trip-error" class="text-danger mt-2" style="display: none;"></div>
                 </div>
             </div>
 
@@ -122,44 +124,46 @@
                 <h2>Trip History</h2>
 
                 <div class="row mb-3">
-                     <div class="col-md-6">
-                         <label for="filter-start-date" class="form-label">From Date</label>
-                         <input type="date" class="form-control" id="filter-start-date">
-                     </div>
-                     <div class="col-md-6">
-                         <label for="filter-end-date" class="form-label">To Date</label>
-                         <input type="date" class="form-control" id="filter-end-date">
-                     </div>
+                    <div class="col-md-6">
+                        <label for="filter-start-date" class="form-label">From Date</label>
+                        <input type="date" class="form-control" id="filter-start-date">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="filter-end-date" class="form-label">To Date</label>
+                        <input type="date" class="form-control" id="filter-end-date">
+                    </div>
                 </div>
-                 <div class="row mb-3">
-                     <div class="col-md-6">
-                         <label for="sort-by" class="form-label">Sort By</label>
-                         <select class="form-select" id="sort-by">
-                             <option value="created_at">Date Created (Default)</option>
-                             <option value="date">Trip Date</option>
-                             <option value="distance">Distance</option>
-                         </select>
-                     </div>
-                     <div class="col-md-6">
-                         <label for="sort-order" class="form-label">Order</label>
-                         <select class="form-select" id="sort-order">
-                             <option value="desc">Newest / Largest First</option>
-                             <option value="asc">Oldest / Smallest First</option>
-                         </select>
-                     </div>
-                 </div>
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="sort-by" class="form-label">Sort By</label>
+                        <select class="form-select" id="sort-by">
+                            <option value="created_at">Date Created (Default)</option>
+                            <option value="date">Trip Date</option>
+                            <option value="distance">Distance</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="sort-order" class="form-label">Order</label>
+                        <select class="form-select" id="sort-order">
+                            <option value="desc">Newest / Largest First</option>
+                            <option value="asc">Oldest / Smallest First</option>
+                        </select>
+                    </div>
+                </div>
 
                 <ul id="trip-history-list" class="list-group">
                     <li class="list-group-item text-muted">Loading trip history...</li>
                 </ul>
-                 <div id="fetch-history-error" class="text-danger mt-2" style="display: none;"></div>
+                <div id="fetch-history-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
-             </div>
         </div>
+    </div>
 
 
-    <div class="modal fade" id="tripDetailsModal" tabindex="-1" aria-labelledby="tripDetailsModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg"> <div class="modal-content">
+    <div class="modal fade" id="tripDetailsModal" tabindex="-1" aria-labelledby="tripDetailsModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="tripDetailsModalLabel">Trip Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -171,11 +175,11 @@
 
                     <h6 class="mt-3">Trip Sequence:</h6>
                     <ul id="detail-trip-sequence" class="list-group list-group-flush">
-                        </ul>
+                    </ul>
 
                     <h6 class="mt-3">Mileage Between Stops:</h6>
-                     <ul id="detail-trip-legs" class="list-group list-group-flush">
-                        </ul>
+                    <ul id="detail-trip-legs" class="list-group list-group-flush">
+                    </ul>
 
                 </div>
                 <div class="modal-footer">
@@ -192,18 +196,18 @@
                     <h5 class="modal-title" id="tripEditModalLabel">Edit Trip</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-  <div class="modal-body">
-    <input type="hidden" id="edit-trip-id">
-    <div class="mb-3">
-      <label class="form-label">Trip Date</label>
-      <input type="date" id="edit-trip-date-input" class="form-control" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Trip Time (optional)</label>
-      <input type="time" id="edit-trip-time-input" class="form-control">
-    </div>
-    <div id="edit-trip-error" class="text-danger" style="display: none;"></div>
-  </div>
+                <div class="modal-body">
+                    <input type="hidden" id="edit-trip-id">
+                    <div class="mb-3">
+                        <label class="form-label">Trip Date</label>
+                        <input type="date" id="edit-trip-date-input" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Trip Time (optional)</label>
+                        <input type="time" id="edit-trip-time-input" class="form-control">
+                    </div>
+                    <div id="edit-trip-error" class="text-danger" style="display: none;"></div>
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" id="save-edit-trip-button" class="btn btn-primary">Save Changes</button>
@@ -212,14 +216,33 @@
         </div>
     </div>
 
+    <!-- Address Edit Modal -->
+<div class="modal fade" id="editAddressModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Edit Address</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input type="text" id="edit-address-input" class="form-control">
+        <div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" id="save-edit-address">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- <script src="script.js"></script> -->
-<script type="module">
-  import './js/main.js';
-</script>
+    <script type="module">
+        import './js/main.js';
+    </script>
 </body>
 
 </html>
