--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
             </div>
         </div>
         <div id="app-content" style="display: none;">
+            <div class="row mb-4 dashboard-summary">
+                <div class="col-md-4">
+                    <div class="card text-white bg-primary">
+                        <div class="card-body">
+                            <h5 class="card-title">Total Trips</h5>
+                            <p class="card-text fs-3" id="total-trips-count">0</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-white bg-success">
+                        <div class="card-body">
+                            <h5 class="card-title">Monthly Mileage</h5>
+                            <p class="card-text fs-3" id="monthly-mileage">0 miles</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-white bg-info">
+                        <div class="card-body">
+                            <h5 class="card-title">Total Reimbursement</h5>
+                            <p class="card-text fs-3" id="total-reimbursement">£0.00</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="mb-3">
                 <h2>Add Client Address</h2>
                 <div class="input-group">
@@ -217,24 +243,24 @@
     </div>
 
     <!-- Address Edit Modal -->
-<div class="modal fade" id="editAddressModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Edit Address</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <input type="text" id="edit-address-input" class="form-control">
-        <div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="save-edit-address">Save</button>
-      </div>
+    <div class="modal fade" id="editAddressModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Address</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="edit-address-input" class="form-control">
+                    <div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="save-edit-address">Save</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
