--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-    <div class="container mt-4">
-        <h1 class="mb-3">Mileage Tracker</h1>
+    <div class="container mt-2 mt-md-4 p-2 p-md-3">
+        <h1 class="mb-3 fs-3 fs-md-1">Mileage Tracker</h1>
 
-        <div id="auth-section" class="mb-4 card p-3">
+        <!-- Auth Section -->
+        <div id="auth-section" class="mb-4 card shadow-sm p-2 p-md-3">
             <div id="logged-out-view">
                 <h3>Log In</h3>
                 <ul class="nav nav-pills nav-fill mb-3" id="authTabs">
@@ -65,8 +66,11 @@
                 <button id="logout-button" class="btn btn-danger btn-sm">Log Out</button>
             </div>
         </div>
+
+        <!-- Main App Content -->
         <div id="app-content" style="display: none;">
-            <div class="row mb-4 dashboard-summary">
+            <!-- Dashboard Cards -->
+            <div class="row row-cols-1 row-cols-md-3 g-4 mb-4 dashboard-summary">
                 <div class="col-md-4">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
@@ -92,11 +96,12 @@
                     </div>
                 </div>
             </div>
+            <!-- Address Management -->
             <div class="mb-3">
                 <h2>Add Client Address</h2>
-                <div class="input-group">
-                    <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
-                    <button id="add-address-button" class="btn btn-primary">Add Address</button>
+                <div class="input-group flex-nowrap flex-md-wrap">
+                    <input type="text" class="form-control flex-grow-1" placeholder="enter client address">
+                    <button class="btn btn-primary w-100 w-md-auto mt-2 mt-md-0">Add Address</button>
                 </div>
                 <div id="add-address-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
@@ -108,7 +113,7 @@
                 <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
 
-            <hr class="my-4">
+            <hr class="my-4 my-md-5">
             <div>
                 <h2>Plan Trip</h2>
                 <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
@@ -145,7 +150,7 @@
                 </div>
             </div>
 
-            <hr class="my-4">
+            <hr class="my-4 my-md-5">
 
             <div class="mb-3">
                 <h2>Trip History</h2>
@@ -186,10 +191,10 @@
         </div>
     </div>
 
-
+    <!-- Modals -->
     <div class="modal fade" id="tripDetailsModal" tabindex="-1" aria-labelledby="tripDetailsModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="tripDetailsModalLabel">Trip Details</h5>
@@ -264,7 +269,8 @@
         </div>
     </div>
 
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <!-- Toast -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-2">
         <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-body d-flex align-items-center">
                 <i class="bi bi-check-circle-fill text-success me-2"></i>
@@ -272,13 +278,13 @@
             </div>
         </div>
     </div>
-
+    
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-    <!-- <script src="script.js"></script> -->
     <script type="module">
         import './js/main.js';
     </script>
