--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
             </div>
             <!-- Address Management -->
             <div class="mb-3">
-                <h2>Add Client Address</h2>
-                <div class="input-group flex-nowrap flex-md-wrap">
-                    <input type="text" class="form-control flex-grow-1" placeholder="enter client address">
-                    <button class="btn btn-primary w-100 w-md-auto mt-2 mt-md-0">Add Address</button>
+                <h2 class="fs-5 fs-md-3">Add Client Address</h2>
+                <div class="input-group flex-wrap gap-2">
+                    <input type="text" id="address-input" class="form-control flex-grow-1 w-100 w-md-auto"
+                        placeholder="Enter client address">
+                    <button id="add-address-button" class="btn btn-primary flex-shrink-0 mt-0 mt-md-0">
+                        Add Address
+                    </button>
                 </div>
                 <div id="add-address-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
@@ -278,7 +281,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
