--- a/index.html
+++ b/index.html
@@ -130,17 +130,13 @@
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <label for="trip-date-input" class="form-label">Trip Date</label>
-<input type="text" 
-       class="form-control datetime-input" 
-       id="trip-date-input"
-       placeholder="Select date">
+                        <input type="text" class="form-control datetime-input" id="trip-date-input"
+                            placeholder="Select date">
                     </div>
                     <div class="col-md-6">
                         <label for="trip-time-input" class="form-label">Trip Time</label>
-<input type="text" 
-       class="form-control datetime-input" 
-       id="trip-time-input"
-       placeholder="Select time">
+                        <input type="text" class="form-control datetime-input" id="trip-time-input"
+                            placeholder="Select time">
                     </div>
                 </div>
                 <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
