--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 
 <body>
-    <div class="container mt-2 mt-md-4 p-2 p-md-3">
-        <h1 class="mb-3 fs-3 fs-md-1">Mileage Tracker</h1>
+    <div class="container mt-4">
+        <h1 class="mb-3">Mileage Tracker</h1>
 
-        <!-- Auth Section -->
-        <div id="auth-section" class="mb-4 card shadow-sm p-2 p-md-3">
+        <div id="auth-section" class="mb-4 card p-3">
             <div id="logged-out-view">
                 <h3>Log In</h3>
-                <ul class="nav nav-pills nav-fill mb-3" id="authTabs">
+                <ul class="nav nav-tabs mb-3" id="authTabs" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login"
                             type="button" role="tab" aria-controls="login" aria-selected="true">Log In</button>
@@ -66,11 +64,8 @@
                 <button id="logout-button" class="btn btn-danger btn-sm">Log Out</button>
             </div>
         </div>
-
-        <!-- Main App Content -->
         <div id="app-content" style="display: none;">
-            <!-- Dashboard Cards -->
-            <div class="row row-cols-1 row-cols-md-3 g-4 mb-4 dashboard-summary">
+            <div class="row mb-4 dashboard-summary">
                 <div class="col-md-4">
                     <div class="card text-white bg-primary">
                         <div class="card-body">
@@ -96,15 +91,11 @@
                     </div>
                 </div>
             </div>
-            <!-- Address Management -->
             <div class="mb-3">
-                <h2 class="fs-5 fs-md-3">Add Client Address</h2>
-                <div class="input-group flex-wrap gap-2">
-                    <input type="text" id="address-input" class="form-control flex-grow-1 w-100 w-md-auto"
-                        placeholder="Enter client address">
-                    <button id="add-address-button" class="btn btn-primary flex-shrink-0 mt-0 mt-md-0">
-                        Add Address
-                    </button>
+                <h2>Add Client Address</h2>
+                <div class="input-group">
+                    <input type="text" id="address-input" class="form-control" placeholder="Enter client address">
+                    <button id="add-address-button" class="btn btn-primary">Add Address</button>
                 </div>
                 <div id="add-address-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
@@ -116,7 +107,7 @@
                 <div id="fetch-addresses-error" class="text-danger mt-2" style="display: none;"></div>
             </div>
 
-            <hr class="my-4 my-md-5">
+            <hr class="my-4">
             <div>
                 <h2>Plan Trip</h2>
                 <p>Select addresses from "My Client Addresses" to add them to your trip sequence.</p>
@@ -130,13 +121,11 @@
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <label for="trip-date-input" class="form-label">Trip Date</label>
-                        <input type="text" class="form-control datetime-input" id="trip-date-input"
-                            placeholder="Select date">
+                        <input type="date" class="form-control" id="trip-date-input">
                     </div>
                     <div class="col-md-6">
                         <label for="trip-time-input" class="form-label">Trip Time</label>
-                        <input type="text" class="form-control datetime-input" id="trip-time-input"
-                            placeholder="Select time">
+                        <input type="time" class="form-control" id="trip-time-input">
                     </div>
                 </div>
                 <button id="calculate-mileage-button" class="btn btn-success">Calculate Mileage</button>
@@ -155,7 +144,7 @@
                 </div>
             </div>
 
-            <hr class="my-4 my-md-5">
+            <hr class="my-4">
 
             <div class="mb-3">
                 <h2>Trip History</h2>
@@ -196,10 +185,10 @@
         </div>
     </div>
 
-    <!-- Modals -->
+
     <div class="modal fade" id="tripDetailsModal" tabindex="-1" aria-labelledby="tripDetailsModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="tripDetailsModalLabel">Trip Details</h5>
@@ -263,8 +252,8 @@
                 </div>
                 <div class="modal-body">
                     <input type="text" id="edit-address-input" class="form-control">
-                    <input type="hidden" id="current-editing-address-id">
-                    <div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
+<input type="hidden" id="current-editing-address-id">
+<div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -274,22 +263,10 @@
         </div>
     </div>
 
-    <!-- Toast -->
-    <div class="toast-container position-fixed bottom-0 end-0 p-2">
-        <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-body d-flex align-items-center">
-                <i class="bi bi-check-circle-fill text-success me-2"></i>
-                <span id="toast-message"></span>
-            </div>
-        </div>
-    </div>
-
-    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script type="module">
         import './js/main.js';
     </script>
