--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                     </div>
                 </div>
             </div>
+            <div class="mb-4">
+                <button id="exportPdfBtn" class="btn btn-outline-secondary me-2">Export Dashboard PDF</button>
+                <button id="exportCsvBtn" class="btn btn-outline-secondary">Export Dashboard CSV</button>
+            </div>
             <div class="mb-3">
                 <h2>Add Client Address</h2>
                 <div class="input-group">
@@ -252,8 +256,8 @@
                 </div>
                 <div class="modal-body">
                     <input type="text" id="edit-address-input" class="form-control">
-<input type="hidden" id="current-editing-address-id">
-<div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
+                    <input type="hidden" id="current-editing-address-id">
+                    <div id="edit-address-error" class="text-danger mt-2" style="display: none;"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -268,6 +272,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script> -->
     <!-- <script src="script.js"></script> -->
+    <!-- PDF generation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <!-- FileSaver for CSV -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script type="module">
         import './js/main.js';
     </script>
