--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- error container -->
-<div id="global-error" class="alert alert-danger m-3" style="display: none; position: sticky; top: 0; z-index: 9999;">
+    <div id="global-error" class="alert alert-danger m-3" style="display: none;"></div>
     <button onclick="throw new Error('Test error')" class="btn btn-warning">
   Simulate Crash
 </button>
